# RAG-assistant

./: .env.INCLUDEYOURKEY  .gitignore  README.md  app.py  conftest.py  pyproject.toml
data/docs/: benefits.md  code-of-conduct.md  company-faq.md  expenses-and-travel.md  it-onboarding.md  leave-policy.md  oncall-runbook.md  procurement.md  remote-work.md  security-policy.md
src/ragassistant/: __init__.py  cli.py  config.py  embeddings.py  generate.py  ingest.py  retrieve.py  store.py
tests/: test_app.py  test_chunking.py  test_embeddings.py  test_generate.py  test_retrieve.py  test_smoke.py  test_store.py
